--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,14 @@
       <div class="col-md-12">
         <div class="header">
           <div class="logo">
-            <img src="./assets/logo.png" alt="">
+            <img src="./assets/logo.png" alt=""  [routerLink]="['/']">
           </div>
         </div>
       </div>
     </div>
+
     <router-outlet></router-outlet>
+
     <div class="row">
       <div class="col-md-12">
         <div class="footer">
